# pingtest

./: Cargo.toml
src/: main.rs
static/: index.html  jitter.html  loop.html
