[package]
name = "pingtest"
version = "0.1.0"
authors = ["Michael Zhou <mzhou@cse.unsw.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
bytes = "1.1"
clap = "2"
failure = "0.1"
failure_derive = "0.1"
futures = "0.3"
futures-util = "0.3"
serde_json = "1.0"
tokio = { version = "1.4", features = ["full"] }
warp = "0.3"
